@@ -17,18 +17,16 @@
 
 package org.openqa.selenium.chromium;
 
-import com.google.common.collect.ImmutableMap;
+import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
+
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
 import org.openqa.selenium.remote.AugmenterProvider;
 import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
-
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
 
 public abstract class AddHasCdp implements AugmenterProvider<HasCdp>, AdditionalHttpCommands {
 
@@ -51,14 +49,17 @@ public abstract class AddHasCdp implements AugmenterProvider<HasCdp>, Additional
   public HasCdp getImplementation(Capabilities capabilities, ExecuteMethod executeMethod) {
     return new HasCdp() {
       @Override
-      public Map<String, Object> executeCdpCommand(String commandName, Map<String, Object> parameters) {
+      public Map<String, Object> executeCdpCommand(
+          String commandName, Map<String, Object> parameters) {
         Require.nonNull("Command name", commandName);
         Require.nonNull("Parameters", parameters);
 
-        Map<String, Object> toReturn = (Map<String, Object>) executeMethod.execute(
-          EXECUTE_CDP, ImmutableMap.of("cmd", commandName, "params", parameters));
+        Map<String, Object> toReturn =
+            (Map<String, Object>)
+                executeMethod.execute(
+                    EXECUTE_CDP, Map.of("cmd", commandName, "params", parameters));
 
-        return ImmutableMap.copyOf(toReturn);
+        return Map.copyOf(toReturn);
       }
     };
   }
