@@ -17,8 +17,11 @@
 
 package org.openqa.selenium.chromium;
 
+import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
@@ -27,18 +30,15 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
-public class AddHasPermissions implements AugmenterProvider<HasPermissions>, AdditionalHttpCommands {
+public class AddHasPermissions
+    implements AugmenterProvider<HasPermissions>, AdditionalHttpCommands {
 
   public static final String SET_PERMISSION = "setPermission";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    SET_PERMISSION, new CommandInfo("/session/:sessionId/permissions", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(SET_PERMISSION, new CommandInfo("/session/:sessionId/permissions", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
@@ -63,7 +63,8 @@ public class AddHasPermissions implements AugmenterProvider<HasPermissions>, Add
         Require.nonNull("Permission name", name);
         Require.nonNull("Permission value", value);
 
-        executeMethod.execute(SET_PERMISSION, ImmutableMap.of("descriptor", ImmutableMap.of("name", name), "state", value));
+        executeMethod.execute(
+            SET_PERMISSION, Map.of("descriptor", Map.of("name", name), "state", value));
       }
     };
   }
