@@ -17,8 +17,11 @@
 
 package org.openqa.selenium.firefox;
 
+import static org.openqa.selenium.remote.Browser.FIREFOX;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
@@ -27,20 +30,17 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.remote.Browser.FIREFOX;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasContext implements AugmenterProvider<HasContext>, AdditionalHttpCommands {
 
   public static final String SET_CONTEXT = "setContext";
   public static final String GET_CONTEXT = "getContext";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    SET_CONTEXT, new CommandInfo("/session/:sessionId/moz/context", HttpMethod.POST),
-    GET_CONTEXT, new CommandInfo("/session/:sessionId/moz/context", HttpMethod.GET));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          SET_CONTEXT, new CommandInfo("/session/:sessionId/moz/context", HttpMethod.POST),
+          GET_CONTEXT, new CommandInfo("/session/:sessionId/moz/context", HttpMethod.GET));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
@@ -64,15 +64,12 @@ public class AddHasContext implements AugmenterProvider<HasContext>, AdditionalH
       public void setContext(FirefoxCommandContext context) {
         Require.nonNull("Firefox Command Context", context);
 
-        executeMethod.execute(
-          SET_CONTEXT,
-          ImmutableMap.of("context", context));
+        executeMethod.execute(SET_CONTEXT, Map.of("context", context));
       }
 
-      @Override public FirefoxCommandContext getContext() {
-        String context = (String) executeMethod.execute(
-          GET_CONTEXT,
-          null);
+      @Override
+      public FirefoxCommandContext getContext() {
+        String context = (String) executeMethod.execute(GET_CONTEXT, null);
 
         return FirefoxCommandContext.fromString(context);
       }
