@@ -17,9 +17,13 @@
 
 package org.openqa.selenium.remote;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import org.openqa.selenium.Beta;
 import org.openqa.selenium.UnsupportedCommandException;
 import org.openqa.selenium.WebDriverException;
@@ -31,20 +35,13 @@ import org.openqa.selenium.logging.LogLevelMapping;
 import org.openqa.selenium.logging.LogType;
 import org.openqa.selenium.logging.Logs;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
 @Beta
 public class RemoteLogs implements Logs {
   private static final String LEVEL = "level";
-  private static final String TIMESTAMP= "timestamp";
+  private static final String TIMESTAMP = "timestamp";
   private static final String MESSAGE = "message";
 
-  private static final Logger logger = Logger.getLogger(RemoteLogs.class.getName());
+  private static final Logger LOG = Logger.getLogger(RemoteLogs.class.getName());
 
   protected ExecuteMethod executeMethod;
 
@@ -65,8 +62,7 @@ public class RemoteLogs implements Logs {
       } catch (WebDriverException e) {
         // An exception may be thrown if the WebDriver server does not recognize profiler logs.
         // In this case, the user should be able to see the local profiler logs.
-        logger.log(Level.WARNING,
-            "Remote profiler logs are not available and have been omitted.", e);
+        LOG.log(Level.WARNING, "Remote profiler logs are not available and have been omitted.", e);
       }
 
       return LogCombiner.combine(remoteEntries, getLocalEntries(logType));
@@ -78,7 +74,7 @@ public class RemoteLogs implements Logs {
   }
 
   private LogEntries getRemoteEntries(String logType) {
-    Object raw = executeMethod.execute(DriverCommand.GET_LOG, ImmutableMap.of(TYPE_KEY, logType));
+    Object raw = executeMethod.execute(DriverCommand.GET_LOG, Map.of(TYPE_KEY, logType));
     if (!(raw instanceof List)) {
       throw new UnsupportedCommandException("malformed response to remote logs command");
     }
@@ -87,9 +83,11 @@ public class RemoteLogs implements Logs {
     List<LogEntry> remoteEntries = new ArrayList<>(rawList.size());
 
     for (Map<String, Object> obj : rawList) {
-      remoteEntries.add(new LogEntry(LogLevelMapping.toLevel((String)obj.get(LEVEL)),
-          (Long) obj.get(TIMESTAMP),
-          (String) obj.get(MESSAGE)));
+      remoteEntries.add(
+          new LogEntry(
+              LogLevelMapping.toLevel((String) obj.get(LEVEL)),
+              (Long) obj.get(TIMESTAMP),
+              (String) obj.get(MESSAGE)));
     }
     return new LogEntries(remoteEntries);
   }
@@ -107,11 +105,11 @@ public class RemoteLogs implements Logs {
     Object raw = executeMethod.execute(DriverCommand.GET_AVAILABLE_LOG_TYPES, null);
     @SuppressWarnings("unchecked")
     List<String> rawList = (List<String>) raw;
-    ImmutableSet.Builder<String> builder = new ImmutableSet.Builder<>();
+    Set<String> builder = new LinkedHashSet<>();
     for (String logType : rawList) {
       builder.add(logType);
     }
     builder.addAll(getAvailableLocalLogs());
-    return builder.build();
+    return Set.copyOf(builder);
   }
 }
