@@ -17,20 +17,15 @@
 
 package org.openqa.selenium.remote.html5;
 
-import com.google.common.collect.ImmutableMap;
-
-import org.openqa.selenium.html5.LocalStorage;
-import org.openqa.selenium.remote.DriverCommand;
-import org.openqa.selenium.remote.ExecuteMethod;
-
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
+import org.openqa.selenium.html5.LocalStorage;
+import org.openqa.selenium.remote.DriverCommand;
+import org.openqa.selenium.remote.ExecuteMethod;
 
-/**
- * Executes the commands to access HTML5 localStorage on the remote webdriver server.
- */
+/** Executes the commands to access HTML5 localStorage on the remote webdriver server. */
 public class RemoteLocalStorage implements LocalStorage {
   private final ExecuteMethod executeMethod;
 
@@ -40,28 +35,28 @@ public class RemoteLocalStorage implements LocalStorage {
 
   @Override
   public String getItem(String key) {
-    Map<String, String> args = ImmutableMap.of("key", key);
+    Map<String, String> args = Map.of("key", key);
     return (String) executeMethod.execute(DriverCommand.GET_LOCAL_STORAGE_ITEM, args);
   }
 
   @Override
   public Set<String> keySet() {
     @SuppressWarnings("unchecked")
-    Collection<String> result = (Collection<String>)
-        executeMethod.execute(DriverCommand.GET_LOCAL_STORAGE_KEYS, null);
+    Collection<String> result =
+        (Collection<String>) executeMethod.execute(DriverCommand.GET_LOCAL_STORAGE_KEYS, null);
     return new HashSet<>(result);
   }
 
   @Override
   public void setItem(String key, String value) {
-    Map<String, String> args = ImmutableMap.of("key", key, "value", value);
+    Map<String, String> args = Map.of("key", key, "value", value);
     executeMethod.execute(DriverCommand.SET_LOCAL_STORAGE_ITEM, args);
   }
 
   @Override
   public String removeItem(String key) {
     String value = getItem(key);
-    Map<String, String> args = ImmutableMap.of("key", key);
+    Map<String, String> args = Map.of("key", key);
     executeMethod.execute(DriverCommand.REMOVE_LOCAL_STORAGE_ITEM, args);
     return value;
   }
