@@ -17,13 +17,10 @@
 
 package org.openqa.selenium.remote.mobile;
 
-import com.google.common.collect.ImmutableMap;
-
+import java.util.Map;
 import org.openqa.selenium.mobile.NetworkConnection;
 import org.openqa.selenium.remote.DriverCommand;
 import org.openqa.selenium.remote.ExecuteMethod;
-
-import java.util.Map;
 
 public class RemoteNetworkConnection implements NetworkConnection {
 
@@ -35,17 +32,17 @@ public class RemoteNetworkConnection implements NetworkConnection {
 
   @Override
   public ConnectionType getNetworkConnection() {
-    return new ConnectionType(((Number) executeMethod.execute(DriverCommand.GET_NETWORK_CONNECTION,
-                                                               null)).intValue());
+    return new ConnectionType(
+        ((Number) executeMethod.execute(DriverCommand.GET_NETWORK_CONNECTION, null)).intValue());
   }
 
   @Override
-  public ConnectionType setNetworkConnection(
-      ConnectionType type) {
-    Map<String, ConnectionType> mode = ImmutableMap.of("type", type);
-    return new ConnectionType(((Number) executeMethod.execute(DriverCommand.SET_NETWORK_CONNECTION,
-                                                            ImmutableMap
-                                                                .of("parameters", mode)))
-                                  .intValue());
+  public ConnectionType setNetworkConnection(ConnectionType type) {
+    Map<String, ConnectionType> mode = Map.of("type", type);
+    return new ConnectionType(
+        ((Number)
+                executeMethod.execute(
+                    DriverCommand.SET_NETWORK_CONNECTION, Map.of("parameters", mode)))
+            .intValue());
   }
 }
