@@ -17,12 +17,6 @@
 
 package org.openqa.selenium.remote.tracing.opentelemetry;
 
-import com.google.common.collect.ImmutableSet;
-
-import org.openqa.selenium.json.Json;
-import org.openqa.selenium.json.JsonOutput;
-import org.openqa.selenium.remote.tracing.Span;
-
 import io.opentelemetry.api.common.AttributeKey;
 import io.opentelemetry.api.common.Attributes;
 import io.opentelemetry.api.trace.StatusCode;
@@ -32,21 +26,26 @@ import io.opentelemetry.sdk.trace.data.EventData;
 import io.opentelemetry.sdk.trace.data.SpanData;
 import io.opentelemetry.sdk.trace.export.SimpleSpanProcessor;
 import io.opentelemetry.sdk.trace.export.SpanExporter;
-
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import org.openqa.selenium.json.Json;
+import org.openqa.selenium.json.JsonOutput;
+import org.openqa.selenium.remote.tracing.Span;
 
 public class SeleniumSpanExporter {
 
   private static final Logger LOG = Logger.getLogger(SeleniumSpanExporter.class.getName());
-  private static final ImmutableSet<String> EXCEPTION_ATTRIBUTES =
-    ImmutableSet.of("exception.message", "exception.stacktrace");
+  private static final Set<String> EXCEPTION_ATTRIBUTES =
+      Set.of("exception.message", "exception.stacktrace");
   private static final boolean httpLogs = OpenTelemetryTracer.getHttpLogs();
+  private static final AttributeKey<String> KEY_SPAN_KIND =
+      AttributeKey.stringKey(org.openqa.selenium.remote.tracing.AttributeKey.SPAN_KIND.getKey());
 
   private static String getJsonString(Map<String, Object> map) {
     StringBuilder text = new StringBuilder();
@@ -58,68 +57,76 @@ public class SeleniumSpanExporter {
   }
 
   public static SpanProcessor getSpanProcessor() {
-    return SimpleSpanProcessor.create(new SpanExporter() {
-      @Override
-      public CompletableResultCode export(Collection<SpanData> spans) {
-        spans.forEach(span -> {
-          LOG.fine(String.valueOf(span));
+    return SimpleSpanProcessor.create(
+        new SpanExporter() {
+          @Override
+          public CompletableResultCode export(Collection<SpanData> spans) {
+            spans.forEach(
+                span -> {
+                  if (LOG.isLoggable(Level.FINE)) {
+                    LOG.fine(String.valueOf(span));
+                  }
 
-          String traceId = span.getTraceId();
-          List<EventData> eventList = span.getEvents();
+                  Level logLevel = getLogLevel(span);
 
-          Level logLevel = getLogLevel(span);
+                  if (!LOG.isLoggable(logLevel)) {
+                    return;
+                  }
 
-          eventList.forEach(event -> {
-            Map<String, Object> map = new HashMap<>();
-            map.put("eventTime", event.getEpochNanos());
-            map.put("traceId", traceId);
-            map.put("eventName", event.getName());
+                  String traceId = span.getTraceId();
+                  List<EventData> eventList = span.getEvents();
+                  eventList.forEach(
+                      event -> {
+                        Map<String, Object> map = new HashMap<>();
+                        map.put("eventTime", event.getEpochNanos());
+                        map.put("traceId", traceId);
+                        map.put("eventName", event.getName());
 
-            Attributes attributes = event.getAttributes();
-            map.put("attributes", attributes.asMap());
+                        Attributes attributes = event.getAttributes();
+                        map.put("attributes", attributes.asMap());
 
-            EXCEPTION_ATTRIBUTES.forEach(exceptionAttribute -> attributes.asMap().keySet()
-              .stream()
-              .filter(key -> exceptionAttribute.equalsIgnoreCase(key.getKey()))
-              .findFirst()
-              .ifPresent(key -> LOG.log(logLevel, attributes.asMap().get(key).toString())));
-            String jsonString = getJsonString(map);
-            LOG.log(logLevel, jsonString);
-          });
+                        EXCEPTION_ATTRIBUTES.forEach(
+                            exceptionAttribute ->
+                                attributes.asMap().keySet().stream()
+                                    .filter(
+                                        key -> exceptionAttribute.equalsIgnoreCase(key.getKey()))
+                                    .findFirst()
+                                    .ifPresent(
+                                        key ->
+                                            LOG.log(
+                                                logLevel, attributes.asMap().get(key).toString())));
+                        String jsonString = getJsonString(map);
+                        LOG.log(logLevel, jsonString);
+                      });
+                });
+            return CompletableResultCode.ofSuccess();
+          }
+
+          @Override
+          public CompletableResultCode flush() {
+            return CompletableResultCode.ofSuccess();
+          }
+
+          @Override
+          public CompletableResultCode shutdown() {
+            // no-op
+            return CompletableResultCode.ofSuccess();
+          }
         });
-        return CompletableResultCode.ofSuccess();
-      }
-
-      @Override
-      public CompletableResultCode flush() {
-        return CompletableResultCode.ofSuccess();
-      }
-
-      @Override
-      public CompletableResultCode shutdown() {
-        // no-op
-        return CompletableResultCode.ofSuccess();
-      }
-    });
   }
 
   private static Level getLogLevel(SpanData span) {
     Level level = Level.FINE;
 
-    Optional<String> kind =
-      Optional.ofNullable(span
-                            .getAttributes()
-                            .get(AttributeKey.stringKey(
-                              org.openqa.selenium.remote.tracing.AttributeKey.SPAN_KIND
-                                .getKey())));
-
     if (span.getStatus().getStatusCode() == StatusCode.ERROR) {
       level = Level.WARNING;
-    } else {
-      if (httpLogs && kind.isPresent()) {
+    } else if (httpLogs) {
+      Optional<String> kind = Optional.ofNullable(span.getAttributes().get(KEY_SPAN_KIND));
+
+      if (kind.isPresent()) {
         String kindValue = kind.get();
-        if (Span.Kind.SERVER.name().equalsIgnoreCase(kindValue) ||
-            Span.Kind.CLIENT.name().equalsIgnoreCase(kindValue)) {
+        if (Span.Kind.SERVER.name().equalsIgnoreCase(kindValue)
+            || Span.Kind.CLIENT.name().equalsIgnoreCase(kindValue)) {
           level = Level.INFO;
         }
       }
