@@ -18,7 +18,8 @@
 package org.openqa.selenium.safari;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
 import org.openqa.selenium.remote.AugmenterProvider;
@@ -26,16 +27,16 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.util.Map;
-import java.util.function.Predicate;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasDebugger implements AugmenterProvider<HasDebugger>, AdditionalHttpCommands {
 
   public static final String ATTACH_DEBUGGER = "attachDebugger";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    ATTACH_DEBUGGER, new CommandInfo("/session/:sessionId/apple/attach_debugger", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          ATTACH_DEBUGGER,
+          new CommandInfo("/session/:sessionId/apple/attach_debugger", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
